--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,18 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+* Heroku link 
+https://bigbasketdemo.herokuapp.com/admin/sign_in
+
+
+For The customer 
+https://bigbasketdemo.herokuapp.com/users/sign_in
+email:-> bigbasketuser@mailinator.com
+password :-> 123456789
+
+For The admin
+https://bigbasketdemo.herokuapp.com/admin/sign_in
+email:-> bigbasketadmin@mailinator.com
+password :-> 123456789
+
